--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "cloudimage/module-responsive-plugin",
-    "description": "Cloudimage Responsive Plugin Module for Magento 2.x",
+    "name": "scaleflex/module-cloudimage",
+    "description": "Scaleflex Cloudimage Plugin Module for Magento 2.x",
     "require": {
         "magento/framework": ">=100.0.0",
         "ext-dom": "*",
         "ext-libxml": "*"
     },
     "type": "magento2-module",
-    "version": "1.1.0",
+    "version": "2.0.0",
     "license": "BSD-3-Clause",
     "authors": [
         {
