--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
             "registration.php"
         ],
         "psr-4": {
-            "Cloudimage\\Responsive\\": ""
+            "Scaleflex\\Cloudimage\\": ""
         }
     }
 }
